# FileManager-API

./: .example.env  README.md  alembic.ini  docker-compose.yml  e.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 147c08331169_add_role_enum_to_users.py  2c104f5fb338_fixed_relationship_in_user_and_files.py  632ce34cc078_added_new_column.py  64b7f276028f_init.py  9387d2f74622_created_new_table_users.py  a01298df5b8d_init2.py  f993c496d311_initial_migration.py
app/: main.py
app/api/: routers.py
app/api/dependecies/: client_db.py  security.py  validate_file.py
app/api/endpoints/: account_routers.py  admin_routes.py  auth_routes.py  files_process.py
app/api/v1/: routers.py
app/api/v1/dependecies/: client_db.py  security.py
app/api/v1/endpoints/: account_routers.py  admin_routes.py  auth_routes.py  files.py  files_process.py  users_routes.py
app/config/: b_settings.py  client_minio.py  client_rabbit.py  database.py  pack_roles.py
app/core/: client_minio.py  config.py
app/core/security/: jwt.py  security_password.py
app/db/: crud.py  crund_file.py  schemas.py
app/db/models/: files_model.py  token_model.py  user_model.py
app/dependencies/: security.py
app/models/: __init__.py  token_model.py  user_model.py
app/repository/: user.py
app/routes/: confirm_change_routes.py  minio_routes.py  user_routes.py
app/schemes/: reset_password.py  token.py  user.py
app/services/: security.py
app/services/send_message/: celery_config.py  email_serv.py  producer.py  taks.py  worker.py
app/templates/email_confirm/: email_confirm.html
app/templates/password_reset/: password_reset.html
app/tests/: test_ValidateFile.py  test_hashing_password.py  test_jwt_manager.py  test_jwt_service.py
app/utils/: jwt_process.py  pass_serv.py  security.py
backend/alembic/: env.py
backend/alembic/versions/: 2bceddfe51c4_init.py
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/dependecies/: client_db.py  security.py  validate_file.py
backend/app/core/: AllowedExtensions.json  config.py
backend/app/core/security/: jwt.py
backend/app/db/: crud.py  crund_file.py
backend/app/db/models/: __init__.py  files_model.py  token_model.py  user_model.py
backend/app/repository/: manager.py
backend/app/repository/collections/: crud_token.py  crud_user.py  (+1 more)
backend/app/tests/: test_ValidateFile.py  test_hashing_password.py  test_jwt_manager.py
backend/services/mail_serv/: email_manager.py  email_sender.py  tasks.py
backend/services/minio_serv/: client.py  manager.py
frontend/static/css/: styles.css
frontend/static/js/: main.js
frontend/templates/: base.html  contacts.html  dashboard.html  index.html  login.html  register.html
services/mail/: email_manager.py  email_sender.py  tasks.py
services/mail/config/: celery_app.py
services/mail_serv/: email_manager.py  tasks.py
services/minio_serv/: client.py  client_minio.py  manager.py
slum_stand3/: docker-compose.yml
(+18 files in other folders)
